sources += files(

    'UndoCalloutResize.vala',
    'UndoCalloutText.vala',

    'UndoConnectedNode.vala',
    'UndoConnectionAdd.vala',
    'UndoConnectionChange.vala',
    'UndoConnectionColor.vala',
    'UndoConnectionDelete.vala',
    'UndoConnectionNote.vala',
    'UndoConnectionStickerAdd.vala',
    'UndoConnectionStickerChange.vala',
    'UndoConnectionStickerRemove.vala',
    'UndoConnectionTitle.vala',
    'UndoConnectionsDelete.vala',

    'UndoGroupAdd.vala',
    'UndoGroupNote.vala',
    'UndoGroupRemove.vala',

    'UndoGroupsColor.vala',
    'UndoGroupsMerge.vala',
    'UndoGroupsRemove.vala',

    'UndoNodeAddParent.vala',
    'UndoNodeAttach.vala',
    'UndoNodeBalance.vala',
    'UndoNodeCallout.vala',
    'UndoNodeCut.vala',
    'UndoNodeDelete.vala',
    'UndoNodeDetach.vala',
    'UndoNodeFolds.vala',
    'UndoNodeImage.vala',
    'UndoNodeInsert.vala',
    'UndoNodeLayout.vala',
    'UndoNodeLink.vala',
    'UndoNodeLinkColor.vala',
    'UndoNodeMove.vala',
    'UndoNodeName.vala',
    'UndoNodeNote.vala',
    'UndoNodePaste.vala',
    'UndoNodeReparent.vala',
    'UndoNodeReparentLinkColor.vala',
    'UndoNodeReplace.vala',
    'UndoNodeResize.vala',
    'UndoNodeSort.vala',
    'UndoNodeSequences.vala',
    'UndoNodeStickerAdd.vala',
    'UndoNodeStickerChange.vala',
    'UndoNodeStickerRemove.vala',
    'UndoNodeSummary.vala',
    'UndoNodeSummaryFromNode.vala',
    'UndoNodeSummaryDelete.vala',
    'UndoNodeTasks.vala',
    'UndoNodeUnclify.vala',

    'UndoNodesAlign.vala',
    'UndoNodesCut.vala',
    'UndoNodesDelete.vala',
    'UndoNodesGroup.vala',
    'UndoNodesInsert.vala',
    'UndoNodesLink.vala',
    'UndoNodesLinkColor.vala',
    'UndoNodesRandLinkColor.vala',
    'UndoNodesReparentLinkColor.vala',
    'UndoNodesReplace.vala',

    'UndoStickerAdd.vala',
    'UndoStickerChange.vala',
    'UndoStickerMove.vala',
    'UndoStickerRemove.vala',
    'UndoStickerResize.vala',

    'UndoStyleAffectChange.vala',
    'UndoStyleBranchMargin.vala',
    'UndoStyleBranchRadius.vala',
    'UndoStyleCalloutFont.vala',
    'UndoStyleCalloutPadding.vala',
    'UndoStyleCalloutPointerWidth.vala',
    'UndoStyleCalloutPointerLength.vala',
    'UndoStyleChange.vala',
    'UndoStyleConnectionArrow.vala',
    'UndoStyleConnectionDash.vala',
    'UndoStyleConnectionFont.vala',
    'UndoStyleConnectionLineWidth.vala',
    'UndoStyleConnectionPadding.vala',
    'UndoStyleConnectionTitleWidth.vala',
    'UndoStyleLinkArrow.vala',
    'UndoStyleLinkDash.vala',
    'UndoStyleLinkType.vala',
    'UndoStyleLinkWidth.vala',
    'UndoStyleNodeBorder.vala',
    'UndoStyleNodeBorderwidth.vala',
    'UndoStyleNodeFill.vala',
    'UndoStyleNodeFont.vala',
    'UndoStyleNodeMargin.vala',
    'UndoStyleNodeMarkup.vala',
    'UndoStyleNodePadding.vala',
    'UndoStyleNodeTextAlign.vala',
    'UndoStyleNodeWidth.vala',

    'UndoTextClearTags.vala',
    'UndoTextDelete.vala',
    'UndoTextInsert.vala',
    'UndoTextMultiInsert.vala',
    'UndoTextReplace.vala',
    'UndoTextTagAdd.vala',
    'UndoTextTagRemove.vala',

)
